[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/misc/coin.png" type="Texture" id=1]
[ext_resource path="res://assets/misc/orb.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/hud/heart.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/hud.gd" type="Script" id=4]
[ext_resource path="res://assets/misc/adrenaline.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/hud_font_panel.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/ui/hud/ui_slot.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/ui/minimal_5x7.ttf"

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HUD" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.025
anchor_right = 0.255
anchor_bottom = 0.24
margin_top = -0.792
margin_bottom = -0.791992
rect_scale = Vector2( 4, 4 )
mouse_filter = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 313.0
margin_bottom = 10.0
mouse_filter = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 91.0
margin_right = 99.0
margin_bottom = 10.0
mouse_filter = 0
texture = ExtResource( 3 )

[node name="HealthLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 127.0
margin_bottom = 10.0
mouse_filter = 0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "0 | 0"
valign = 1

[node name="CoinTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 131.0
margin_right = 137.0
margin_bottom = 10.0
mouse_filter = 0
texture = ExtResource( 1 )

[node name="CoinLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 153.0
margin_bottom = 10.0
mouse_filter = 0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="OrbTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 165.0
margin_bottom = 10.0
mouse_filter = 0
texture = ExtResource( 2 )

[node name="OrbLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 169.0
margin_right = 181.0
margin_bottom = 10.0
mouse_filter = 0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="AdrenalineTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 185.0
margin_right = 193.0
margin_bottom = 10.0
mouse_filter = 0
texture = ExtResource( 5 )

[node name="AdrenalineLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 221.0
margin_bottom = 10.0
mouse_filter = 0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "0 | 0"

[node name="UISlot" type="TextureRect" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 313.0
margin_bottom = 30.0
mouse_filter = 0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 3 )
